Fix margin in top heading on small screens.

--- a/public/css/tmpfs.css
+++ b/public/css/tmpfs.css
@@ -35,7 +35,7 @@ h6, h6 a,
   background-color: hsla(var(--hue), 70%, 20%, 1);
 }
 
-.sidebar-about a {
+.sidebar-about h1 {
   font-size: 1.2rem;
   line-height: 1;
 }
